--- a/app/src/main/res/layout/item_animal.xml
+++ b/app/src/main/res/layout/item_animal.xml
@@ -37,7 +37,7 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ImgAnimal"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/alto_animal_item"
             android:scaleType="centerInside"
             android:src="@drawable/cat"
             app:layout_constraintTop_toTopOf="parent"
