--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,10 +15,14 @@
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
-    <!--<style name="ToolbarLogoWhite" parent="Widget.MaterialComponents.Toolbar">
+    <style name="ToolbarLogoWhite" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/white</item>
         <item name="colorPrimary">@color/white</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+        <item name="tickColor">@color/white</item>
         <item name="titleTextColor">@color/white</item>
         <item name="colorOnSecondary">@color/white</item>
         <item name="subtitleTextColor">@color/white</item>
@@ -27,6 +31,11 @@
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
-    </style>-->
+        <item name="colorControlNormal">@color/white</item>
+        <item name="android:color">@color/white</item>
+        <item name="drawableTint">@color/white</item>
+        <item name="iconTint">@color/white</item>
+        <item name="android:iconTint" tools:targetApi="o">@color/white</item>
+    </style>
 
 </resources>
