git update y register

--- a/app/src/main/res/layout/view_delete.xml
+++ b/app/src/main/res/layout/view_delete.xml
@@ -54,6 +54,7 @@
         >
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/idAlertCancelMascota"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
@@ -66,6 +67,7 @@
         </com.google.android.material.button.MaterialButton>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/idAlertDeleteMascota"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
