--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -30,6 +30,7 @@
         android:gravity="center_horizontal"
         >
         <TextView
+            android:id="@+id/NameMascota"
             android:layout_marginTop="@dimen/padding_min"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,6 +49,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/TypeMascota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/type_mascota"
@@ -55,6 +57,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/NacimientoMascota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fecha_nacimiento_mascota"
@@ -66,6 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/question_chip"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             app:chipBackgroundColor="@android:color/holo_blue_dark"
             app:chipCornerRadius="@dimen/corderChip"
             />
@@ -75,6 +80,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/question_vacuna_day"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             app:chipBackgroundColor="@android:color/holo_green_light"
             app:chipCornerRadius="@dimen/corderChip"
             />
@@ -84,18 +91,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/question_inscription"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             app:chipBackgroundColor="@android:color/holo_orange_light"
             app:chipCornerRadius="@dimen/corderChip"
             />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/FotoMascota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/cat"
+            android:src="@drawable/snake"
             >
         </androidx.appcompat.widget.AppCompatImageView>
 
         <TextView
+            android:id="@+id/PesoMascota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/peso_gramos"
@@ -112,24 +123,28 @@
             >
         </TextView>
         <TextView
+            android:id="@+id/NameDuenio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name_duenio"
             >
         </TextView>
         <TextView
+            android:id="@+id/EmailDuenio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/email"
             >
         </TextView>
         <TextView
+            android:id="@+id/PhoneDuenio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/phone"
             >
         </TextView>
         <TextView
+            android:id="@+id/DirDuenio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/direction"
