--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,7 +54,7 @@
                 android:text="@string/type_mascota">
             </TextView>
 
-            <com.google.android.material.textfield.TextInputLayout
+            <!--<com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -68,6 +68,14 @@
                 </AutoCompleteTextView>
 
             </com.google.android.material.textfield.TextInputLayout>
+            -->
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/idAutoCompleteTypeAnimalList"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                android:background="@drawable/border_element"
+                >
+            </androidx.appcompat.widget.AppCompatSpinner>
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -193,7 +201,7 @@
                 android:text="@string/tamanio_mascota">
             </TextView>
 
-            <com.google.android.material.textfield.TextInputLayout
+            <!--<com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -208,7 +216,16 @@
                     android:inputType="none">
                 </AutoCompleteTextView>
 
-            </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>-->
+
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/idAutoCompleteTamanioAnimal"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                android:background="@drawable/border_element"
+                >
+            </androidx.appcompat.widget.AppCompatSpinner>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
